<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_progresso"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.ucam.aula.projeto.projetop1.ProgressoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_myplaces"
                android:id="@+id/imageViewProgresso"
                android:layout_weight="1" />

            <TextView
                android:text="@string/textViewProgresso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewProgresso"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textStyle="normal|bold"
                android:textColor="?attr/colorBackgroundFloating" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout8"
            android:layout_alignParentStart="true"
            android:layout_marginTop="90dp">

            <TextView
                android:text="@string/textViewProgAulas"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:id="@+id/textViewProgAulasDadas"
                android:fontFamily="casual"
                android:textStyle="normal|bold"
                android:textSize="18sp"
                android:gravity="center" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/ProgressBarProgAulas" />

            <TextView
                android:text="@string/textViewProgExecFeitos"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:id="@+id/textViewProgExecFeitos"
                android:fontFamily="casual"
                android:textStyle="normal|bold"
                android:textSize="18sp"
                android:gravity="center" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/ProgressBarProgExecs" />

            <TextView
                android:text="@string/textViewProgLabsEnviados"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:id="@+id/textViewProgLabsEnviados"
                android:fontFamily="casual"
                android:textStyle="normal|bold"

                android:textSize="18sp"
                android:gravity="center" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/ProgressBarProgLabs" />
        </LinearLayout>

    </RelativeLayout>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="74dp"
        app:srcCompat="?attr/actionModeCloseDrawable"
        android:id="@+id/ImagemButtonVoltar"
        android:layout_weight="1"
        android:elevation="0dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:width="1dp"
        android:layout_marginTop="400dp"
        android:layout_below="@+id/linearLayout7"
        android:layout_alignParentStart="true" />

</RelativeLayout>
