<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.ucam.aula.projeto.projetop1.PrincipalActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="false"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerHorizontal="false"
            android:layout_centerInParent="false"
            android:layout_alignParentTop="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/sided"
                android:id="@+id/imageView8" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:id="@+id/textViewBemVindo"
                android:text="@string/textViewBemVindo"
                android:gravity="center"
                android:layout_below="@+id/imageViewBemVindo"
                android:layout_alignParentStart="true"
                android:fontFamily="casual" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_alignParentStart="false"
            android:layout_centerVertical="false"
            android:layout_alignParentTop="false"
            android:layout_centerInParent="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_dialog_email"
                    android:id="@+id/imageView4"
                    android:layout_width="45dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/editTextEmail"
                    android:hint="Digite seu e-mail"
                    android:inputType="textEmailAddress"
                    android:fontFamily="casual"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_height="match_parent"
                    app:srcCompat="@android:drawable/ic_lock_idle_lock"
                    android:id="@+id/imageView5"
                    android:layout_width="45dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/editTextSenha"
                    android:hint="Digite sua senha"
                    android:fontFamily="casual"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true">

            <Button
                android:layout_height="85dp"
                android:id="@+id/buttonAcessar"
                android:text="@string/buttonAcessar"
                android:layout_width="wrap_content"
                android:width="1dp"
                android:elevation="0dp"
                android:layout_weight="1"
                android:background="@android:drawable/dialog_holo_light_frame" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/buttonLimpar"
                android:text="@string/buttonLimpar"
                android:width="1dp"
                android:layout_weight="1"
                android:elevation="0dp"
                android:background="@android:drawable/dialog_holo_light_frame" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
